--- a/pages/vehicleWeatherer.html
+++ b/pages/vehicleWeatherer.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>StormTools Vehicle Weatherer</title>
+        <title>Vehicle Weatherer</title>
         <link rel="stylesheet" href="/styles.css">
     </head>
 
@@ -20,7 +20,7 @@
             In Stormworks, weathering generally is when faces are painted with random slight variations in the colors to make them appear weathered. With this tool you pick a specfic color on the vehicle to weather, and the amount of colors to weather with.
             <br><br>
             <fieldset style="max-width:400px; padding:15px;">
-                <legend>Vehicle Weatherer v0.1.0</legend>
+                <legend>Vehicle Weatherer v0.1.1</legend>
                 <div class="row">
                     
                     <div class="column">
