--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             For now I've only added my image to paintblock converter and vehicle weatherer, but could add more in the future. <br>
             For suggestions, reporting bugs, or questions, either submit an issue on <a href="https://github.com/Alyosha015/Alyosha015.github.io/issues">Github</a> or on discord: Alyosha15#8170.
             <h1>Updates</h1>
+            <h2>2023.3.28</h2>
+            <ul>
+                <li>v0.1.1 of Vehicle Weatherer released
+                    <ul>
+                        <li>Fixed saving newlines in lua of vehicle being weathered.</li>
+                    </ul>
+                </li>
+            </ul>
             <h2>2023.2.19</h2>
             <ul>
                 <li>v0.1.0 of Image Converter released</li>
