--- a/pages/imageConverter.html
+++ b/pages/imageConverter.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>StormTools Image Converter</title>
+        <title>Image Converter</title>
         <link rel="stylesheet" href="/styles.css">
     </head>
 
