--- a/pages/vehicleWeatherer.html
+++ b/pages/vehicleWeatherer.html
@@ -20,11 +20,12 @@
             In Stormworks, weathering generally is when faces are painted with random slight variations in the colors to make them appear weathered. With this tool you pick a specfic color on the vehicle to weather, and the amount of colors to weather with.
             <br><br>
             <fieldset style="max-width:400px; padding:15px;">
-                <legend>Vehicle Weatherer v0.1.1</legend>
+                <legend>Vehicle Weatherer v0.1.2</legend>
                 <div class="row">
                     
                     <div class="column">
                         <label>Color to Weather:</label> <input type="text" id="colorToWeather" style="width: 92%;"> <br>
+                        <label>Color Var.&nbsp;&nbsp;</label> <input type="number" id="variation" value="255" style="width: 24%;"> <br>
                         <label># of Colors&nbsp;</label> <input type="number" id="numColors" value="4" style="width: 24%;"> <br>
                         <label>% to Weather</label> <input type="number" id="percentToWeather" value="100" style="width: 24%;"> <br>
                     </div>
@@ -49,6 +50,9 @@
                     Enter the rgb values of the color on your vehicle you want to be weathered in the <b>Color To Weather</b> text box. They have to be entered with spaces inbetween, for example <b>234 124 86</b>.
                 </li>
                 <li>
+                    Set the variation of the colors used to weather from the original color by changing <b>Color Var.</b>. This controls the max amount the rgb values of the colors used to weather will differ from the colors being weathered. If you want to set your own colors with the change tool, I suggest keeping the value at 255 to see the difference better. If not I suggest keeping it in the 2-20 range.
+                </li>
+                <li>
                     Set how many colors should be used to weather by changing the <b># of Colors</b> number input. (This includes the original color, for example if set it to 4, 3 extra colors would be used).
                 </li>
                 <li>
@@ -56,9 +60,6 @@
                 </li>
                 <li>
                     Click <b>Generate XML</b>, and the vehicle file will be generated and downloaded. Copy if from your downloads folder to the stormworks vehicle folder: <b>%AppData%\Stormworks\data\vehicles\</b>. (One way to reach the folder is to press Windows+R to open Run, then paste the path in and press enter).
-                </li>
-                <li>
-                    I found that try to weather using automatically generated similar colors didn't turn out well, so the colors used to weather are only meant to be placeholders and are randomly generated, but make it easy to see the colors when using replace color in the editor. So for the last step, you have to change the colors to the ones you want.
                 </li>
             </ol>
         </div>
