--- a/pages/vehicleWeatherer.html
+++ b/pages/vehicleWeatherer.html
@@ -25,7 +25,7 @@
                     
                     <div class="column">
                         <label>Color to Weather:</label> <input type="text" id="colorToWeather" style="width: 92%;"> <br>
-                        <label>Color Var.&nbsp;&nbsp;</label> <input type="number" id="variation" value="255" style="width: 24%;"> <br>
+                        <label>Color Var.&nbsp;&nbsp;</label> <input type="number" id="variation" value="10" style="width: 24%;"> <br>
                         <label># of Colors&nbsp;</label> <input type="number" id="numColors" value="4" style="width: 24%;"> <br>
                         <label>% to Weather</label> <input type="number" id="percentToWeather" value="100" style="width: 24%;"> <br>
                     </div>
@@ -50,7 +50,7 @@
                     Enter the rgb values of the color on your vehicle you want to be weathered in the <b>Color To Weather</b> text box. They have to be entered with spaces inbetween, for example <b>234 124 86</b>.
                 </li>
                 <li>
-                    Set the variation of the colors used to weather from the original color by changing <b>Color Var.</b>. This controls the max amount the rgb values of the colors used to weather will differ from the colors being weathered. If you want to set your own colors with the change tool, I suggest keeping the value at 255 to see the difference better. If not I suggest keeping it in the 2-20 range.
+                    Set the variation of the colors used to weather from the original color by changing <b>Color Var.</b>. This controls the max amount the rgb values of the colors used to weather will differ from the colors being weathered. If you want to set your own colors with the color replace tool in the vehicle editor, I suggest setting the value to 255 to see the difference better. If not I suggest keeping it in the 2-20 range.
                 </li>
                 <li>
                     Set how many colors should be used to weather by changing the <b># of Colors</b> number input. (This includes the original color, for example if set it to 4, 3 extra colors would be used).
