--- a/index.html
+++ b/index.html
@@ -11,39 +11,14 @@
             <a href="/index.html">Home</a>
             <a id="seperator">|</a>
             <a href="/pages/imageConverter.html">Image To Paintblock</a>
-            <a id="seperator">|</a>
-            <a href="/pages/vehicleWeatherer.html">Vehicle Weatherer</a>
         </header>
 
         <div id="body">
-            <h1>StormTools</h1>
+            <h1>Alyosha15's Stormworks Tools</h1>
             Using my questionable JavaScript ability and inspiration from <a href="https://mrlennyn.github.io/">MrLennyn's Website</a>, I've made this to have versions of my stormworks tools available to use, since releasing a bunch of exe's seemed excessive.<br>
             <br>
-            For now I've only added my image to paintblock converter and vehicle weatherer, but could add more in the future. <br>
+            For now I've only added my image to paintblock converter. <br>
             For suggestions, reporting bugs, or questions, either submit an issue on <a href="https://github.com/Alyosha015/Alyosha015.github.io/issues">Github</a> or on discord: Alyosha15#8170.
-            <h1>Updates</h1>
-            <h2>2023.3.29</h2>
-            <ul>
-                <li>v0.1.2 of Vehicle Weatherer released
-                    <ul>
-                        <li>Added back variation feature to control how similar the colors used to weather are to color being weathered.</li>
-                    </ul>
-                </li>
-            </ul>
-            <h2>2023.3.28</h2>
-            <ul>
-                <li>v0.1.1 of Vehicle Weatherer released
-                    <ul>
-                        <li>Fixed saving newlines in lua of vehicle being weathered.</li>
-                    </ul>
-                </li>
-            </ul>
-            <h2>2023.2.19</h2>
-            <ul>
-                <li>v0.1.0 of Image Converter released</li>
-                <li>v0.1.0 of Vehicle Weatherer released</li>
-                <li>Since it's the first version of both tools, there may be bugs I haven't found when testing.</li>
-            </ul>
         </div>
     </body>
 </html>
